--- a/portfolio.scss
+++ b/portfolio.scss
@@ -223,6 +223,10 @@ body{
     height: 14em;
     width: 90%;
     padding: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     img{
         width:100px;
         margin: 0;
