--- a/portfolio.css
+++ b/portfolio.css
@@ -234,6 +234,8 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 .technology-card {
@@ -242,7 +244,7 @@ body {
   margin: 0.3em;
   height: 14em;
   width: 90%;
-  padding: 2em;
+  padding: 0.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
