--- a/portfolio.scss
+++ b/portfolio.scss
@@ -211,9 +211,9 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center
-    
-    
+    justify-content: center;
+    max-width: 1400px;
+    margin:0 auto;
 }
 
 .technology-card{
@@ -222,11 +222,12 @@ body{
     margin: 0.3em;
     height: 14em;
     width: 90%;
-    padding: 2em;
+    padding: 0.5em;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     img{
         width:100px;
         margin: 0;
