--- a/portfolio.css
+++ b/portfolio.css
@@ -66,6 +66,7 @@ body {
   text-transform: none;
   margin-top: 0.7em;
   margin-bottom: 2.5em;
+  font-weight: 500;
 }
 
 .banner .btn:hover {
@@ -129,7 +130,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: #ebebeb;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 0.5em;
 }
 
@@ -162,6 +164,21 @@ body {
   padding: 1em;
 }
 
+.card-content h3 {
+  text-align: center;
+  font-weight: 800;
+  color: #2e2d2d;
+}
+
+.card-content h4 {
+  color: #424242;
+}
+
+.card-content ul {
+  color: #5a5a5a;
+  font-weight: 400;
+}
+
 .card-content li {
   margin: 0.2em 0;
 }
@@ -185,13 +202,17 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .card {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    width: 650px;
+    width: 600px;
+    min-height: 300px;
   }
   .card-img {
     width: 60%;
@@ -264,8 +285,11 @@ body {
 
 .technology-card img {
   width: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
   margin: 0;
   padding: 0;
+  border-radius: 30px;
 }
 
 .about-me-section {
