--- a/portfolio.css
+++ b/portfolio.css
@@ -132,7 +132,6 @@ body {
           flex-direction: column;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-radius: 0.5em;
 }
 
 .card ul {
@@ -153,11 +152,11 @@ body {
 .card-img {
   -o-object-fit: cover;
      object-fit: cover;
+  overflow: hidden;
   width: 100%;
   min-width: 0;
   min-height: 0;
   background: black;
-  overflow: none;
 }
 
 .card-content {
@@ -289,7 +288,6 @@ body {
      object-fit: cover;
   margin: 0;
   padding: 0;
-  border-radius: 30px;
 }
 
 .about-me-section {
